--- a/eclipse-phase.html
+++ b/eclipse-phase.html
@@ -20,112 +20,157 @@
                         <ul class="list-group mb-3">
                             <li class="list-group-item d-flex justify-content-between lh-sm">
                                 <div>
-                                    <h6 class="my-0">Product name</h6>
-                                    <small class="text-muted">Brief description</small>
+                                    <h6 class="my-0">Cognition (COG)</h6>
+                                    <small class="text-muted">Cognition</small>
                                 </div>
-                                <span class="text-muted">$12</span>
+                                <span class="text-muted">20/60</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between lh-sm">
                                 <div>
-                                    <h6 class="my-0">Second product</h6>
-                                    <small class="text-muted">Brief description</small>
+                                    <h6 class="my-0">Intuition (INT)</h6>
+                                    <small class="text-muted">Intuition</small>
                                 </div>
-                                <span class="text-muted">$8</span>
+                                <span class="text-muted">20/60</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between lh-sm">
                                 <div>
-                                    <h6 class="my-0">Third item</h6>
-                                    <small class="text-muted">Brief description</small>
+                                    <h6 class="my-0">R&eacute;flexes (REF)</h6>
+                                    <small class="text-muted">Reflexes</small>
                                 </div>
-                                <span class="text-muted">$5</span>
+                                <span class="text-muted">20/60</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between lh-sm©">
                                 <div>
-                                    <h6 class="my-0">Promo code</h6>
-                                    <small>EXAMPLECODE</small>
+                                    <h6 class="my-0">Astuces (SAV)</h6>
+                                    <small class="text-muted">Savvy</small>
                                 </div>
-                                <span class="text-muted">−$5</span>
+                                <span class="text-muted">20/60</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between lh-sm©">
+                                <div>
+                                    <h6 class="my-0">Somatique (SOM)</h6>
+                                    <small class="text-muted">Somatics</small>
+                                </div>
+                                <span class="text-muted">20/60</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between lh-sm©">
+                                <div>
+                                    <h6 class="my-0">Volont&eacute; (WIL)</h6>
+                                    <small class="text-muted">Willpower</small>
+                                </div>
+                                <span class="text-muted">20/60</span>
                             </li>
                         </ul>
                     </div>
                     <div class="col-md-7 col-lg-8">
-                        <h4 class="mb-3">Billing address</h4>
+                        <h4 class="mb-3">Personnage</h4>
                         <div class="row g-3">
                             <div class="col-sm-6">
-                                <label for="firstName" class="form-label">First name</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                                <label for="name" class="form-label">Nom</label>
+                                <input type="text" class="form-control" id="name" placeholder="Name" value="" required>
                                 <div class="invalid-feedback">
-                                    Valid first name is required.
+                                    Valid name is required.
                                 </div>
                             </div>
-
                             <div class="col-sm-6">
-                                <label for="lastName" class="form-label">Last name</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                                <label for="aliases" class="form-label">Alias</label>
+                                <input type="text" class="form-control" id="aliases" placeholder="Aliases" value="" required>
                                 <div class="invalid-feedback">
-                                    Valid last name is required.
+                                    Valid aliases is required.
                                 </div>
                             </div>
-
-                            <div class="col-12">
-                                <label for="username" class="form-label">Username</label>
-                                <div class="input-group has-validation">
-                                    <span class="input-group-text">@</span>
-                                    <input type="text" class="form-control" id="username" placeholder="Username" required>
-                                    <div class="invalid-feedback">
-                                        Your username is required.
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-12">
-                                <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-                                <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                            <div class="col-sm-6">
+                                <label for="motivations" class="form-label">Motivations</label>
+                                <input type="text" class="form-control" id="motivations" placeholder="Motivations" value="" required>
                                 <div class="invalid-feedback">
-                                    Please enter a valid email address for shipping updates.
+                                    Valid motivations are required.
                                 </div>
                             </div>
-
-                            <div class="col-12">
-                                <label for="address" class="form-label">Address</label>
-                                <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+                            <div class="col-sm-6">
+                                <label for="languages" class="form-label">Langues</label>
+                                <input type="text" class="form-control" id="languages" placeholder="Languages" value="" required>
                                 <div class="invalid-feedback">
-                                    Please enter your shipping address.
+                                    Valid languages is required.
                                 </div>
                             </div>
-
-                            <div class="col-12">
-                                <label for="address2" class="form-label">Address 2 <span class="text-muted">(Optional)</span></label>
-                                <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                            </div>
-
-                            <div class="col-md-5">
-                                <label for="country" class="form-label">Country</label>
-                                <select class="form-select" id="country" required>
-                                    <option value="">Choose...</option>
-                                    <option>United States</option>
-                                </select>
+                            <div class="col-sm-12">
+                                <label for="ego-traits" class="form-label">Traits d&apos;ego</label>
+                                <textarea class="form-control" id="ego-traits" rows="3" placeholder="Ego Traits"></textarea>
                                 <div class="invalid-feedback">
-                                    Please select a valid country.
+                                    Valid ego traits are required.
                                 </div>
                             </div>
-
+                            <div class="col-sm-6">
+                                <label for="background" class="form-label">Ant&eacute;c&eacute;dents</label>
+                                <input type="text" class="form-control" id="background" placeholder="Background" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid background is required.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="career" class="form-label">Carri&egrave;re</label>
+                                <input type="text" class="form-control" id="career" placeholder="Career" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid career is required.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="interest" class="form-label">Int&eacute;r&ecirc;ts</label>
+                                <input type="text" class="form-control" id="interest" placeholder="Interest" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid interest is required.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="faction" class="form-label">Faction</label>
+                                <input type="text" class="form-control" id="faction" placeholder="Faction" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid faction is required.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="muse" class="form-label">Muse</label>
+                                <input type="text" class="form-control" id="muse" placeholder="Muse" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid muse is required.
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="rez-points" class="form-label">Points de r&eacute;solution</label>
+                                <input type="number" class="form-control" id="rez-points" placeholder="Rez Points (Spent/Unspent)" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid Rez Points is required.
+                                </div>
+                            </div>
                             <div class="col-md-4">
-                                <label for="state" class="form-label">State</label>
-                                <select class="form-select" id="state" required>
-                                    <option value="">Choose...</option>
-                                    <option>California</option>
+                                <label for="gender" class="form-label">Genre</label>
+                                <select class="form-select" id="gender" required>
+                                    <option value="">Gender</option>
+                                    <option>F&eacute;minin</option>
+                                    <option>Ind&eacute;termin&eacute;</option>
+                                    <option>Masculin</option>
                                 </select>
                                 <div class="invalid-feedback">
-                                    Please provide a valid state.
+                                    Please select a valid gender.
                                 </div>
                             </div>
-
-                            <div class="col-md-3">
-                                <label for="zip" class="form-label">Zip</label>
-                                <input type="text" class="form-control" id="zip" placeholder="" required>
+                            <div class="col-md-4">
+                                <label for="sex" class="form-label">Sexe</label>
+                                <select class="form-select" id="sex" required>
+                                    <option value="">Sex</option>
+                                    <option>F&eacute;minin</option>
+                                    <option>Ind&eacute;termin&eacute;</option>
+                                    <option>Masculin</option>
+                                </select>
                                 <div class="invalid-feedback">
-                                    Zip code required.
+                                    Please provide a valid sex.
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="age" class="form-label">&Acirc;ge</label>
+                                <input type="number" class="form-control" id="age" placeholder="Age" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid age is required.
                                 </div>
                             </div>
                         </div>
