--- a/eclipse-phase.html
+++ b/eclipse-phase.html
@@ -211,23 +211,43 @@
                 </div>
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="skills">
-                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Skills/Comp&eacute;tences</button>
+                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">
+                            Comp&eacute;tences
+                            <small class="text-muted">(Skills)</small>
+                        </button>
                     </li>
                     <li class="nav-item" role="gears">
-                        <button class="nav-link" id="gears-tab" data-bs-toggle="tab" data-bs-target="#gears" type="button" role="tab" aria-controls="gears" aria-selected="false">Gears/&Eacute;quipement</button>
+                        <button class="nav-link" id="gears-tab" data-bs-toggle="tab" data-bs-target="#gears" type="button" role="tab" aria-controls="gears" aria-selected="false">
+                            &Eacute;quipement
+                            <small class="text-muted">(Gears)</small>
+                        </button>
                     </li>
                     <li class="nav-item" role="reputation">
-                        <button class="nav-link" id="reputation-tab" data-bs-toggle="tab" data-bs-target="#reputation" type="button" role="tab" aria-controls="reputation" aria-selected="false">R&eacute;putation</button>
+                        <button class="nav-link" id="reputation-tab" data-bs-toggle="tab" data-bs-target="#reputation" type="button" role="tab" aria-controls="reputation" aria-selected="false">
+                            R&eacute;putation
+                            <small class="text-muted">(Reputation)</small>
+                        </button>
                     </li>
                     <li class="nav-item" role="notes-tab">
-                        <button class="nav-link" id="notes-tab" data-bs-toggle="tab" data-bs-target="#notes" type="button" role="tab" aria-controls="notes" aria-selected="false">Notes</button>
+                        <button class="nav-link" id="notes-tab" data-bs-toggle="tab" data-bs-target="#notes" type="button" role="tab" aria-controls="notes" aria-selected="false">
+                            Notes
+                            <small class="text-muted">(Notes)</small>
+                        </button>
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active border-end border-bottom border-start" id="home" role="tabpanel" aria-labelledby="home-tab">Compétences</div>
-                    <div class="tab-pane fade border-end border-bottom border-start" id="gears" role="tabpanel" aria-labelledby="gears-tab">Equipement</div>
-                    <div class="tab-pane fade border-end border-bottom border-start" id="reputation" role="tabpanel" aria-labelledby="reputation-tab">
-                        <div class="row">
+                    <div class="tab-pane fade show active border-end border-bottom border-start bg-white" id="home" role="tabpanel" aria-labelledby="home-tab">
+                        <div class="row py-5 px-5">
+                            Comp&eacute;tences
+                        </div>
+                    </div>
+                    <div class="tab-pane fade border-end border-bottom border-start bg-white" id="gears" role="tabpanel" aria-labelledby="gears-tab">
+                        <div class="row py-5 px-5">
+                            &Eacute;quipement
+                        </div>
+                    </div>
+                    <div class="tab-pane fade border-end border-bottom border-start bg-white" id="reputation" role="tabpanel" aria-labelledby="reputation-tab">
+                        <div class="row py-5 px-5">
                             <!-- @-Rep, C-Rep, F-Rep & G-Rep -->
                             <label class="form-check-label col-md-3" for="a-rep1">&commat;-Rep</label>
                             <label class="form-check-label col-md-3" for="c-rep1">C-Rep</label>
@@ -358,7 +378,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade border-end border-bottom border-start" id="notes" role="tabpanel" aria-labelledby="notes-tab">Notes</div>
+                    <div class="tab-pane fade border-end border-bottom border-start bg-white" id="notes" role="tabpanel" aria-labelledby="notes-tab">
+                        <div class="row py-5 px-5">Notes</div>
+                    </div>
                 </div>
             </main>
             <!-- Footer -->
