--- a/eclipse-phase.html
+++ b/eclipse-phase.html
@@ -234,6 +234,12 @@
                             <small class="text-muted">(Notes)</small>
                         </button>
                     </li>
+                    <li class="nav-item" role="morph-tab">
+                        <button class="nav-link" id="morph-tab" data-bs-toggle="tab" data-bs-target="#morph" type="button" role="tab" aria-controls="morph" aria-selected="false">
+                            Morph
+                            <small class="text-muted">(Morph)</small>
+                        </button>
+                    </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active border-end border-bottom border-start bg-white" id="home" role="tabpanel" aria-labelledby="home-tab">
@@ -380,6 +386,9 @@
                     </div>
                     <div class="tab-pane fade border-end border-bottom border-start bg-white" id="notes" role="tabpanel" aria-labelledby="notes-tab">
                         <div class="row py-5 px-5">Notes</div>
+                    </div>
+                    <div class="tab-pane fade border-end border-bottom border-start bg-white" id="morph" role="tabpanel" aria-labelledby="morph-tab">
+                        <div class="row py-5 px-5">Morph</div>
                     </div>
                 </div>
             </main>
