--- a/eclipse-phase.html
+++ b/eclipse-phase.html
@@ -244,7 +244,54 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active border-end border-bottom border-start bg-white" id="home" role="tabpanel" aria-labelledby="home-tab">
                         <div class="row py-5 px-5">
-                            Comp&eacute;tences
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                <tr>
+                                    <th scope="col">Comp&eacute;tences</th>
+                                    <th scope="col">Aptitudes</th>
+                                    <th scope="col">Type</th>
+                                    <th scope="col">Total</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th scope="row">
+                                        Athl&eacute;tisme
+                                        <small class="text-muted">(Athletics)</small>
+                                    </th>
+                                    <td>SOM</td>
+                                    <td>
+                                        Physique
+                                        <small class="text-muted">(Physical)</small>
+                                    </td>
+                                    <td>40</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Comp&eacute;tence exotique
+                                        <small class="text-muted">(Exotic Skill)</small>
+                                    </th>
+                                    <td>-</td>
+                                    <td>
+                                        Domaine
+                                        <small class="text-muted">(Field)</small>
+                                    </td>
+                                    <td>30</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">
+                                        Tromper
+                                        <small class="text-muted">(Deceive)</small>
+                                    </th>
+                                    <td>SAV</td>
+                                    <td>
+                                        Social
+                                        <small class="text-muted">(Social)</small>
+                                    </td>
+                                    <td>30</td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                     <div class="tab-pane fade border-end border-bottom border-start bg-white" id="gears" role="tabpanel" aria-labelledby="gears-tab">
