--- a/eclipse-phase.html
+++ b/eclipse-phase.html
@@ -243,14 +243,27 @@
                 </ul>
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active border-end border-bottom border-start bg-white" id="home" role="tabpanel" aria-labelledby="home-tab">
-                        <div class="row py-5 px-5">
-                            <table class="table table-striped table-hover">
+                        <div class="row">
+                            <div class="row py-5 px-5">
+                                <table class="table table-striped table-hover">
                                 <thead>
                                     <tr>
-                                        <th scope="col">Comp&eacute;tences</th>
-                                        <th scope="col">Aptitudes</th>
-                                        <th scope="col">Type</th>
-                                        <th scope="col">Total</th>
+                                        <th scope="col">
+                                            Comp&eacute;tence<br>
+                                            <small class="text-muted">(Skill)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Aptitude<br>
+                                            <small class="text-muted">(APT)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Type<br>
+                                            <small class="text-muted">(Type)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Total<br>
+                                            <small class="text-muted">(Total)</small>
+                                        </th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -520,11 +533,136 @@
                                     </tr>
                                 </tbody>
                             </table>
+                            </div>
                         </div>
                     </div>
                     <div class="tab-pane fade border-end border-bottom border-start bg-white" id="gears" role="tabpanel" aria-labelledby="gears-tab">
                         <div class="row py-5 px-5">
-                            &Eacute;quipement
+                            <table class="table table-striped table-hover my-4">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">
+                                            Arme<br>
+                                            <small class="text-muted">(Weapon)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Comp&eacute;tence<br>
+                                            <small class="text-muted">(Skill)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Dommages<br>
+                                            <small class="text-muted">(Ranged DV)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Mode de tir<br>
+                                            <small class="text-muted">(Firing Mode)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Munition<br>
+                                            <small class="text-muted">(Ammo)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Port&eacute;e<br>
+                                            <small class="text-muted">(Range)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Complexit&eacute;<br>
+                                            <small class="text-muted">(Complexity/Gear Points)</small>
+                                        </th>
+                                        <th scope="col">
+                                            Notes<br>
+                                            <small class="text-muted">(Notes)</small>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">Claws</th>
+                                        <td>Melee</td>
+                                        <td>2d6</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>Min/1</td>
+                                        <td>Concealeable</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">Battle Laser</th>
+                                        <td>Beam</td>
+                                        <td>3d10 &plus; 4</td>
+                                        <td>SA/BF/FA</td>
+                                        <td>50</td>
+                                        <td>150</td>
+                                        <td>Maj/R/3</td>
+                                        <td>Fixed, Long</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <table class="table table-striped table-hover my-4">
+                                <thead>
+                                <tr>
+                                    <th scope="col">
+                                        Armure<br>
+                                        <small class="text-muted">(Armor Type)</small>
+                                    </th>
+                                    <th scope="col">
+                                        &Eacute;nergie<br>
+                                        <small class="text-muted">(Energy)</small>
+                                    </th>
+                                    <th scope="col">
+                                        Cin&eacute;tique<br>
+                                        <small class="text-muted">(Kinetic)</small>
+                                    </th>
+                                    <th scope="col">
+                                        Complexit&eacute;<br>
+                                        <small class="text-muted">(Complexity/Gear Points)</small>
+                                    </th>
+                                    <th scope="col">
+                                        Notes<br>
+                                        <small class="text-muted">(Notes)</small>
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th scope="row">Biowave</th>
+                                    <td>&plus;2</td>
+                                    <td>&plus;3</td>
+                                    <td>Min/1</td>
+                                    <td>Conceleable</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <table class="table table-striped table-hover my-4">
+                                <thead>
+                                <tr>
+                                    <th scope="col">
+                                        Paquetage<br>
+                                        <small class="text-muted">(Gear)</small>
+                                    </th>
+                                    <th scope="col">
+                                        Complexit&eacute;<br>
+                                        <small class="text-muted">(Complexity/Gear Points)</small>
+                                    </th>
+                                    <th scope="col">
+                                        Description<br>
+                                        <small class="text-muted">Description</small>
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th scope="row">Automech</th>
+                                    <td>Mod/2</td>
+                                    <td>Repair Bot</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Enhanced Vision</th>
+                                    <td>Mod/2</td>
+                                    <td>Tetrachromatic vision, wide frequency range, better focus. &plus;10 vision Perceive Tests</td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                     <div class="tab-pane fade border-end border-bottom border-start bg-white" id="morph" role="tabpanel" aria-labelledby="morph-tab">
