--- a/eclipse-phase.html
+++ b/eclipse-phase.html
@@ -668,7 +668,95 @@
                     <div class="tab-pane fade border-end border-bottom border-start bg-white" id="morph" role="tabpanel" aria-labelledby="morph-tab">
                         <div class="row py-5 px-5">
                             <div class="col-md-4">
-
+                                <label for="damage-taken" class="form-label">xxxxx</label>
+                                <input type="number" class="form-control" id="damage-taken" placeholder="Damage Taken" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid damage taken is required.
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="wounds-taken" class="form-label">xxxxx</label>
+                                <input type="number" class="form-control" id="wounds-taken" placeholder="Wounds Taken" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid wounds taken is required.
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="recharge-short-1">
+                                    <label class="form-check-label" for="recharge-short-1">
+                                        R&eacute;cuparation courte 1d6
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="recharge-short-2">
+                                    <label class="form-check-label" for="recharge-short-2">
+                                        R&eacute;cuparation courte 1d6
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" id="recharge-long">
+                                    <label class="form-check-label" for="recharge-long">
+                                        R&eacute;cuparation compl&egrave;te
+                                    </label>
+                                </div>
+                            </div>
+                            <hr class="my-4" />
+                            <div class="col-md-3">
+                                <label for="insight" class="form-label">Perspicacit&eacute;</label>
+                                <input type="number" class="form-control" id="insight" placeholder="Insight" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid insight is required.
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="moxie" class="form-label">Audace</label>
+                                <input type="number" class="form-control" id="moxie" placeholder="Moxie" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid moxie is required.
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="vigor" class="form-label">Vigueur</label>
+                                <input type="number" class="form-control" id="vigor" placeholder="Vigor" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid vigor is required.
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="flex" class="form-label">Flexibilit&eacute;</label>
+                                <input type="number" class="form-control" id="flex" placeholder="Flex" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid flex is required.
+                                </div>
+                            </div>
+                            <div class="col-md-3 my-4">
+                                <label for="wound-threshold" class="form-label">Seuil de blessure</label>
+                                <input type="number" class="form-control" id="wound-threshold" placeholder="Wound Threshold" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid wound threshold is required.
+                                </div>
+                            </div>
+                            <div class="col-md-3 my-4">
+                                <label for="durability" class="form-label">Endurance</label>
+                                <input type="number" class="form-control" id="durability" placeholder="Durability" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid durability is required.
+                                </div>
+                            </div>
+                            <div class="col-md-3 my-4">
+                                <label for="death-rating" class="form-label">Mort</label>
+                                <input type="number" class="form-control" id="death-rating" placeholder="Death Rating" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid death rating is required.
+                                </div>
+                            </div>
+                            <div class="col-md-3 my-4">
+                                <label for="ego-flex" class="form-label">Flexibilit&eacute; de l'&eacute;go</label>
+                                <input type="number" class="form-control" id="ego-flex" placeholder="Ego Flex" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid ego flex is required.
+                                </div>
                             </div>
                         </div>
                     </div>
